OGM-264 Don't expose JDBC-related IntegralDataTypeHolder via GridDialect#nextValue()
* Changing the method to expect a parameter object, simplifying further evolution
* Returning the sequence value, hiding the usage of IntegralDataTypeHolder from grid dialects